<resources>
    <string name="app_name">VulnerAppBLE</string>


    <string name="action_start">START</string>
    <string name="action_next">NEXT</string>
    <string name="action_stop">STOP</string>
    <string name="action_discon">DISCONNECT</string>
    <string name="action_connect">CONNECT</string>
    <string name="action_clear">CLEAR</string>
    <string name="ble_servers">BLE SERVERS</string>
    <string name="action_advertise">ADVERTISE</string>
    <string name="moto">Motorist/Cyclist</string>
    <string name="car">Car</string>
    <string name="walk">Pedestrian</string>
    <string name="messages">Messages</string>
    <string name="tap">What type of user are you?</string>
    <string name="scan_results"><u>Near road users:</u></string>
    <string name= "total"><u>Total devices : %d</u></string>
    <string name="userDisplay">User type: %1$h \nName: %2$s</string>
    <string name="deviceImage">Type of user image</string>
    <string name="nearImage">Signal that indicates if the device is near or very near</string>



    <!-- Logs -->

    <string name="logs">Logs</string>
    <string name="clear">Clear</string>
    <string name="title_activity_maps">Map</string>


</resources>
