<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vru.uniovi.es.vulnerappble.ClientActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="top"
        android:orientation="horizontal"
        android:layout_marginStart="3dp">

        <TextView
            android:id="@+id/ScanResults"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:elevation="0dp"
            android:paddingTop="15dp"
            android:text="@string/scan_results"
            android:textAlignment="textStart"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"/>


    </LinearLayout>

        <ListView
            android:id="@+id/deviceList"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@android:color/transparent"
            android:dividerHeight="12dp"
            android:scrollbarStyle="outsideOverlay"
            android:paddingBottom="7dp"
            android:paddingLeft="9dp"
            android:paddingRight="9dp"
            android:paddingTop="10dp"
            android:textStyle="bold"
            android:layout_weight="1"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="51dp" />

    <TextView
        android:id="@+id/total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_scanning_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/action_start"
                android:textColor="@color/cardview_light_background"
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>

            <Button
                android:id="@+id/stop_scanning_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/action_stop"
                android:textColor="@color/cardview_light_background"
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>

            <Button
                android:id="@+id/clear_scanning_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:text="@string/action_clear"
                android:textColor="@color/cardview_light_background"
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/userType"
                android:layout_width="260dp"
                android:layout_height="60dp"
                android:layout_marginStart="3dp"
                android:background="@drawable/border"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>