<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="vru.uniovi.es.vulnerappble.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:paddingTop="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="28sp"
            android:text="@string/tap"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:clipToPadding="false">

        <android.support.v7.widget.CardView
            android:id="@+id/moto_card"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/backgroundcolor"
            tools:background="@color/backgroundcolor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/moto_view"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/cerclebackgroundpurple"
                    android:contentDescription="@null"
                    android:padding="10dp"
                    android:src="@drawable/ic_directions_bike_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/moto"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/white" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/car_card"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/cerclebackgroundgreen"
                    android:contentDescription="@null"
                    android:padding="10dp"
                    android:src="@drawable/ic_directions_car_black_24dp"
                    tools:id="@+id/car_view" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/car"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/white" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:clipToPadding="false">
        <android.support.v7.widget.CardView
            android:id="@+id/pedes_card"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="255dp"
            android:layout_height="120dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/cerclebackgroundblue"
                    android:contentDescription="@null"
                    android:padding="10dp"
                    android:src="@drawable/ic_directions_walk_black_24dp"
                    tools:id="@+id/pedestrian_view" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/walk"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/white" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/next_button"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/action_next"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>


    </LinearLayout>


</LinearLayout>
